use java 11 unmodifiable set copy